--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-    <%= render 'layouts/_flash_tasks' %>
+    <%= render 'layouts/flash_tasks' %>
 
     <%= yield %>
   </body>
