--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,10 +1,7 @@
-<h1>タスクの作成</h1>
+<h1>メッセージ一覧</h1>
 
-<%= form_for(@task) do |f| %>
-  <%= f.label :content, 'タスク' %>
-  <%= f.text_field :content %>
-
-  <%= f.submit '投稿' %>
-<% end %>
-
-<%= link_to '一覧に戻る', tasks_path %>
+<ul>
+  <% @task.each do |task| %>
+  <li><%= task.content %></li>
+  <%  end %>
+</ul>
